--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@
 # org.gradle.parallel=true
 #Tue Jun 30 11:14:50 CEST 2015
 testCrashlytics=false
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m
+org.gradle.jvmargs=-Xmx2048M -XX:MaxPermSize=512M
 autoUpdateBuildNumber=1
