--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply from: 'strip_play_services.gradle'
 
 android {
     compileSdkVersion 23
@@ -20,16 +21,15 @@ android {
 }
 
 dependencies {
-    compile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.5'
     compile 'commons-codec:commons-codec:1.10'
     compile 'commons-io:commons-io:2.4'
     compile 'com.android.support:appcompat-v7:23.0.0'
+    //compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'net.iharder:base64:2.3.8'
     compile files('libs/android-async-http-1.4.4.jar')
-    compile files('libs/android-support-v7-cardview.jar')
-    compile files('libs/android-support-v7-recyclerview.jar')
-    compile files('libs/mockito-all-1.10.19.jar')
+    testCompile files('libs/mockito-all-1.10.19.jar')
     compile files('libs/org.apache.http.legacy.jar')
 }
