--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'net.iharder:base64:2.3.8'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile files('libs/android-async-http-1.4.4.jar')
     compile files('libs/android-support-v7-cardview.jar')
     compile files('libs/android-support-v7-recyclerview.jar')
