--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 26
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "org.spontaneous"
         minSdkVersion 21
-        targetSdkVersion 23
+        targetSdkVersion 26
     }
 
     buildTypes {
@@ -20,17 +20,17 @@ android {
 }
 
 dependencies {
-    compile 'junit:junit:4.12'
-    compile 'com.google.code.gson:gson:2.5'
-    compile 'commons-codec:commons-codec:1.10'
-    compile 'commons-io:commons-io:2.4'
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.google.android.gms:play-services:9.8.0'
-    compile 'net.iharder:base64:2.3.8'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.google.code.gson:gson:2.5'
+
+    implementation 'commons-io:commons-io:2.4'
+    implementation 'com.android.support:appcompat-v7:24.0.0'
+    implementation 'com.google.android.gms:play-services:9.8.0'
+    implementation 'net.iharder:base64:2.3.8'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'junit:junit:4.12'
     compile files('libs/android-async-http-1.4.4.jar')
     compile files('libs/android-support-v7-cardview.jar')
     compile files('libs/android-support-v7-recyclerview.jar')
-    compile files('libs/mockito-all-1.10.19.jar')
-    compile files('libs/org.apache.http.legacy.jar')
+
+    implementation 'commons-codec:commons-codec:1.10'
 }
