--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    useLibrary 'org.apache.http.legacy'
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "org.spontaneous"
-        minSdkVersion 21
-        targetSdkVersion 26
+        minSdkVersion 26
+        targetSdkVersion 28
     }
 
     buildTypes {
@@ -21,16 +20,13 @@ android {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.5'
-
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'commons-io:commons-io:2.4'
-    implementation 'com.android.support:appcompat-v7:24.0.0'
     implementation 'com.google.android.gms:play-services:9.8.0'
     implementation 'net.iharder:base64:2.3.8'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'junit:junit:4.12'
-    compile files('libs/android-async-http-1.4.4.jar')
-    compile files('libs/android-support-v7-cardview.jar')
-    compile files('libs/android-support-v7-recyclerview.jar')
-
+    implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
+    implementation 'cz.msebera.android:httpclient:4.4.1.2'
     implementation 'commons-codec:commons-codec:1.10'
 }
